# oar-ocr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
docs/: models.md  usage.md
examples/: document_orientation.rs  document_rectification.rs  formula_recognition.rs  layout_detection.rs  ocr.rs  seal_text_detection.rs  structure.rs  table_cell_detection.rs  table_classification.rs  table_structure_recognition.rs  text_detection.rs  text_line_orientation.rs  text_recognition.rs
examples/utils/: device_config.rs  mod.rs
src/core/: macros.rs  mod.rs  registry.rs
src/core/config/: mod.rs  onnx.rs  parallel.rs
src/core/errors/: types.rs
src/core/inference/: ort_infer_config.rs
src/domain/: structure.rs
src/domain/adapters/: document_orientation_adapter.rs  document_rectification_adapter.rs  formula_recognition_adapter.rs  layout_detection_adapter.rs  seal_text_detection_adapter.rs  table_cell_detection_adapter.rs  table_classification_adapter.rs  table_structure_recognition_adapter.rs  text_detection_adapter.rs  text_line_orientation_adapter.rs  text_recognition_adapter.rs
src/domain/tasks/: document_orientation.rs  document_rectification.rs  formula_recognition.rs  table_cell_detection.rs  table_classification.rs  table_structure_recognition.rs  text_detection.rs  text_line_orientation.rs
src/models/detection/: rtdetr.rs  scale_aware_detector.rs
src/models/recognition/: pp_formulanet.rs  unimernet.rs
src/oarocr/: mod.rs  ocr.rs  preprocess.rs  processors.rs  result.rs  structure.rs  table_analyzer.rs
src/predictors/: core.rs  document_orientation.rs  document_rectification.rs  formula_recognition.rs  layout_detection.rs  seal_text_detection.rs  table_cell_detection.rs  table_classification.rs  table_structure_recognition.rs  text_detection.rs  text_line_orientation.rs  text_recognition.rs
src/processors/: db_mask.rs  db_postprocess.rs  geometry.rs  normalization.rs  types.rs
src/utils/: bbox_crop.rs  mod.rs  transform.rs
