[package]
name = "oar-ocr"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Wang Xin <xinwang614@gmail.com>"]
description = "A comprehensive OCR library built in Rust with ONNX Runtime for efficient inference"
repository = "https://github.com/greatv/oar-ocr"
homepage = "https://github.com/greatv/oar-ocr"
readme = "README.md"
keywords = [
    "ocr",
    "onnx",
    "computer-vision",
    "text-recognition",
    "machine-learning",
]
categories = ["computer-vision", "science"]

[[bin]]
name = "oar-ocr-server"
path = "src/bin/server/main.rs"
required-features = ["cli"]

[features]
default = ["download-binaries"]
visualization = ["dep:ab_glyph"]
cli = ["dep:axum", "dep:reqwest", "dep:tokio", "dep:tower-http", "dep:uuid", "dep:pdfium-render"]
# ONNX Runtime execution provider features
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
webgpu = ["ort/webgpu"]
openvino = ["ort/openvino"]
download-binaries = ["ort/download-binaries"]

[dependencies]
image = "0.25.6"
imageproc = "0.25.0"
itertools = "0.14"
once_cell = "1.19"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.9"
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "tracing", "copy-dylibs"] }
ndarray = "0.16"
nalgebra = "0.32"
rayon = "1.8"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ab_glyph = { version = "0.2", optional = true }
tokenizers = "0.20"
clipper2 = "0.5.3"
clap = { version = "4.5", features = ["derive", "env"] }
# CLI/Server dependencies (optional)
axum = { version = "0.8", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
uuid = { version = "1.11", features = ["v4"], optional = true }
pdfium-render = { version = "0.8", optional = true }

[dev-dependencies]
